test/asm/opt-r.err
error: Missing argument to option 'r'
    at opt-r.asm(5)
error: Invalid argument to option 'r' ("2a")
    at opt-r.asm(6)
FATAL: Recursion limit (0) exceeded
    at opt-r.asm(13)
